--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,27 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0-rc1'
+        classpath 'com.nabilhachicha:android-native-dependencies:0.1+'
     }
 }
 
 apply plugin: 'android'
+apply plugin: 'android-native-dependencies'
 
 android {
-    buildToolsVersion "21.1.1"
-    compileSdkVersion 21
+    buildToolsVersion "21.0.2"
+    compileSdkVersion 8
+
+    lintOptions {
+        abortOnError false
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:1.4.1"
+        compile "com.badlogicgames.gdx:gdx-backend-android:1.4.1"
+    }
 }
